--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/LevelFragment.tscn", "res://Scenes/Finger.tscn", "res://Scenes/fingerEnemy.tscn")
-current_scene="res://Scenes/LevelFragment.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 52)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
